[package]
name = "rs_timed_text_dump_worker"
version = "0.1.0"
authors = ["Valentin NOEL <valentin.noel@media-io.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcai_worker_sdk = { version = "0.11.10", features = ["media"] }
schemars = "0.8.0"
serde = "^1.0"
serde_derive = "^1.0"
stainless-ffmpeg-sys = "4.2"
yaserde = "^0.4"

[build-dependencies]
built = "0.4"
